<resources>
    <string name="app_name">Cats</string>
    <string name="empty_list">List is empty</string>
    <string name="book_details">Cat details</string>
    <string name="error">Something wrong</string>
    <string name="add_item">Add</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="empty_field">Check your fields</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="hint_search">Search...</string>
    <string name="cats_filter">Filter</string>
</resources>